# MDxApp

./: .gitignore  .pre-commit-config.yaml  EXECUTIVE_SUMMARY.md  GPT5_MINI_FIX.md  GPT5_MINI_IMPLEMENTATION.md  GPT5_MINI_UPGRADE_COMPLETE.md  LICENSE  MODERNIZATION_COMPLETE.md  Makefile  QUALITY_REPORT.md  QUICK_SETUP_GPT5.md  README.md  ROADMAP_2025.md  TEST_RESULTS.md  TROUBLESHOOTING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.streamlit/: pages.toml  secrets.toml
Assets/: translations.json
ChatGPT_Clone/: ChatGPT_Clone_20230120.py
MDxApp/: 01_🏥_Diagnosis_Assistant.py
MDxApp/.streamlit/: config.toml
MDxApp/pages/: 02_📰_About.py  03_✉️_Contact.py
MDxApp/pages/styles/: main.css
Streamlit_MDxApp/: .gitignore  01_🏥_Diagnosis_Assistant.py  README.md
Streamlit_MDxApp/MDxApp/pages/style/: email_style.css
Streamlit_MDxApp/pages/: 02_📰_About.py
Streamlit_apps/MDxApp/: README.md
src/: README.md  __init__.py
src/components/: __init__.py  donation.py  language_selector.py  patient_form.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  ai_client.py  prompt_builder.py  prompts.py
src/models/: __init__.py  patient.py
src/utils/: __init__.py  i18n.py  logger.py  styling.py
tests/: __init__.py  test_i18n.py  test_patient_model.py
